# GPU

./: .gitignore  pyproject.toml  shader0.wgsl  ttt.py
Cloth_Simulation/: README.md
Cloth_Simulation/shaders/: collision_friction.wgsl  compute_normals_grid.wgsl  render_basic.wgsl  render_lit.wgsl  render_sphere.wgsl  render_sphere_lit.wgsl  step2_structural_shear_bend.wgsl  step4_collision_friction.wgsl  structural_shear_bend.wgsl
Cloth_Simulation/src/: __init__.py  app.py  camera.py  data_init.py  gpu_utils.py  input_controller.py  scene.py  simulation.py
Projet/: main.py
Projet/shaders/: render_basic.wgsl  render_lit.wgsl  render_sphere_lit.wgsl  step0_integrate.wgsl  step1_gravity.wgsl  step1_gravity_pp.wgsl  step2_structural.wgsl  step2_structural_shear_bend.wgsl  step3_collision_sphere.wgsl  step4_collision_friction.wgsl
Projet/src/: camera.py  cloth_renderer.py  cloth_renderer_lit.py  cloth_sim.py  data_init.py  gpu_utils.py  renderer.py  sphere_renderer.py  sphere_renderer_lit.py
cloth/: README.md
cloth/shaders/: render_basic.wgsl  step0_integrate.wgsl  step2_structural_shear.wgsl  step2_structural_shear_bend.wgsl  step3_collision_sphere.wgsl  step4_collision_friction.wgsl
cloth_step0/: README.md  main.ipynb
lab1/: _game_of_life.ipynb  compute.wgsl  compute_annotated.wgsl  comute_shader.ipynb  labo1.ipynb  labo1_annotated.ipynb  render.wgsl  resume.ipynb  shader.wgsl  test.py  test1.py
lab2/: labo2.ipynb
lab3/: labo3.ipynb  sphere111.py
lab4/: imgui.py  instances.py  read.md  shader.wgsl
lab5/: Project_Cloth_Simulation.ipynb  projet.ipynb
(+16 files in other folders)
