[project]
name = "gpu-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async>=0.6.2",
    "camera>=1.3.0",
    "glfw>=2.10.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "primitives>=0.1.0",
    "pygame>=2.6.1",
    "rendercanvas>=2.4.0",
    "torch>=2.9.1",
    "wgpu>=0.28.0",
]
